--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Ejercicio6",
             "request": "launch",
             "mainClass": "ejercicios_pag213y214.Ejercicio6",
+            "projectName": "Programacion_DAM_e01179bb"
+        },
+        {
+            "type": "java",
+            "name": "Ejercicio6",
+            "request": "launch",
+            "mainClass": "ejercicios_pag213y214.Ejercicio6",
             "projectName": "Programacion_DAM_e3b61271"
         },
         {
