--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Ejercicio4",
             "request": "launch",
             "mainClass": "actividades_propuestas_t8.Ejercicio4",
+            "projectName": "Programacion_DAM_e01179bb"
+        },
+        {
+            "type": "java",
+            "name": "Ejercicio4",
+            "request": "launch",
+            "mainClass": "actividades_propuestas_t8.Ejercicio4",
             "projectName": "Programacion_DAM_e3b61271"
         },
         {
