--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,20 @@
             "name": "Ejercicio8",
             "request": "launch",
             "mainClass": "ejercicios_practicos_t8.Ejercicio8",
+            "projectName": "Programacion_DAM_e3b61271"
+        },
+        {
+            "type": "java",
+            "name": "Ejercicio6",
+            "request": "launch",
+            "mainClass": "ejercicios_practicos_t8.Ejercicio6",
+            "projectName": "Programacion_DAM_e3b61271"
+        },
+        {
+            "type": "java",
+            "name": "Ejercicio8",
+            "request": "launch",
+            "mainClass": "ejercicios_practicos_t8.Ejercicio8",
             "projectName": "Programacion_DAM_e01179bb"
         },
         {
