--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "Main",
             "request": "launch",
+            "mainClass": "com.example.Main",
+            "projectName": "com.example-demo"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
             "mainClass": "proyecto1.demo.src.main.java.com.example.Main",
             "projectName": "Programacion_DAM_e3b61271"
         },
